# ansible-swissknife

./: .gitignore  Vagrantfile  ansible-requirements.yml  ansible.cfg  inventory.ini  pyproject.toml
playbooks/: ansible.yml  caddy.yml  common.yml  configure-hosts-full.yml  consul.yml  digitalocean.yml  docker.yml  node-exporter.yml  nomad.yml  postgres.yml  promtail.yml  swarm.yml  vault.yml
playbooks/group_vars/all/: vars.yml  vault.yml
playbooks/group_vars/nomad/: vars.yml  vault.yml
playbooks/group_vars/postgres/: vars.yml  vault.yml
playbooks/roles/ansible/defaults/: main.yml
playbooks/roles/ansible/meta/: main.yml
playbooks/roles/ansible/tasks/: main.yml
playbooks/roles/backup_scripts/files/: pfs.sh
playbooks/roles/backup_scripts/tasks/: main.yml
playbooks/roles/caddy/defaults/: main.yml
playbooks/roles/caddy/files/: lb
playbooks/roles/caddy/handlers/: main.yml
playbooks/roles/caddy/tasks/: debian.yml  main.yml
playbooks/roles/consul/files/: client.json  consul.service  consul_self.json  nomad.json  server.json  vault.json
playbooks/roles/consul/tasks/: main.yml
playbooks/roles/digitalocean/defaults/: main.yml
playbooks/roles/digitalocean/meta/: main.yml
playbooks/roles/digitalocean/tasks/: main.yml
playbooks/roles/docker/tasks/: main.yml
playbooks/roles/nginx/defaults/: main.yml
playbooks/roles/nginx/files/: default.conf
playbooks/roles/nginx/tasks/: main.yml
playbooks/roles/node-exporter/defaults/: main.yml
playbooks/roles/node-exporter/tasks/: main.yml
plugins/plugins/filter/: prontoja.py
(+35 files in other folders)
